@@ -5,9 +5,10 @@ import java.util.EnumSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
+import org.apache.poi.EncryptedDocumentException;
+import org.apache.poi.hssf.record.RecordInputStream.LeftoverDataException;
 import org.apache.poi.ss.usermodel.Sheet;
 import org.apache.poi.ss.usermodel.Workbook;
 import org.apache.poi.ss.usermodel.WorkbookFactory;
@@ -15,6 +16,7 @@ import org.apache.poi.ss.usermodel.WorkbookFactory;
 import xyz.hotchpotch.hogandiff.excel.BookLoader;
 import xyz.hotchpotch.hogandiff.excel.BookType;
 import xyz.hotchpotch.hogandiff.excel.ExcelHandlingException;
+import xyz.hotchpotch.hogandiff.excel.PasswordHandlingException;
 import xyz.hotchpotch.hogandiff.excel.SheetType;
 import xyz.hotchpotch.hogandiff.excel.common.BookHandler;
 import xyz.hotchpotch.hogandiff.excel.common.CommonUtil;
@@ -84,12 +86,31 @@ public class BookLoaderWithPoiUserApi implements BookLoader {
         Objects.requireNonNull(bookPath, "bookPath");
         CommonUtil.ifNotSupportedBookTypeThenThrow(getClass(), BookType.of(bookPath));
         
-        try (Workbook wb = WorkbookFactory.create(bookPath.toFile())) {
+        try (Workbook wb = WorkbookFactory.create(bookPath.toFile(), null, true)) {
             
             return StreamSupport.stream(wb.spliterator(), false)
                     .filter(s -> PoiUtil.possibleTypes(s).stream().anyMatch(targetTypes::contains))
                     .map(Sheet::getSheetName)
-                    .collect(Collectors.toList());
+                    .toList();
+            
+        } catch(LeftoverDataException e) {
+            // FIXME: [No.7 POI関連] 書き込みpw付きのxlsファイルを開けない
+            // 
+            // 書き込みpw有り/読み込みpw無しのxlsファイルを開こうとすると
+            // org.apache.poi.hssf.record.RecordInputStream$LeftoverDataException が発生する。
+            // 下記ブログを参考に "VelvetSweatshop" を試してみたが改善されなかった。
+            // https://blog.cybozu.io/entry/2017/03/09/080000
+            //
+            // 暫定対処として、LeftoverDataException はその他の場合にも発生するかもしれないが
+            // 書き込みpw付きxlsファイルであると見なしてしまい、
+            // 本当は読み取り専用で読み込めてほしいが
+            // サポート対象外であるとユーザーに案内することにする。
+            throw new PasswordHandlingException(
+                    "パスワード付きファイルには対応していません：" + bookPath, e);
+            
+        } catch(EncryptedDocumentException e) {
+            throw new PasswordHandlingException(
+                    "パスワード付きファイルには対応していません：" + bookPath, e);
             
         } catch (Exception e) {
             throw new ExcelHandlingException("処理に失敗しました：" + bookPath, e);
